--- a/ExpandableListView/app/src/main/res/values/strings.xml
+++ b/ExpandableListView/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
-    <string name="app_name">ExpandableListView</string>
+    <string name="app_name">Sop</string>
     <string name="action_settings">Settings</string>
+    <string name="search">收尋專案</string>
+    <string name="settings">設定</string>
+    <string name="about">關於程式</string>
+    <string name="menuItemEdit">修改步驟</string>
+    <string name="menuItemDelete">刪除步驟</string>
 </resources>
