Not_Connect_API
Not_Connect_API

--- a/SOP_v1/app/src/main/res/values/strings.xml
+++ b/SOP_v1/app/src/main/res/values/strings.xml
@@ -13,4 +13,13 @@
     <string name="title_activity_networkfee">networkfee</string>
     <string name="title_activity_dormsign">dormsign</string>
     <string name="title_activity_ballot">ballot</string>
+    <string name="oauth_create_certificate">必須先登入才能新增專案</string>
+    <string name="oauth_delete_certificate">必須先登入才能刪除專案</string>
+
+    <string name="oauth_create_step_certificate">必須先登入才能新增專案</string>
+    <string name="oauth_delete_step_certificate">必須先登入才能刪除專案</string>
+    <string name="oauth_edit_step_certificate">必須先登入才能編輯專案</string>
+    <string name="oauth_edit_step_copy">必須先登入才能複製專案</string>
+    <string name="title_activity_add_new_one">add_new_one</string>
+    <string name="title_activity_detail_step">DetailStepActivity</string>
 </resources>
